# sqli-python

./: .gitignore  LICENSE  README.md  pyproject.toml
src/bsqli/: __init__.py  bsqli.py
test/: tests.py
