[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "bsqli"
version = "0.0.2"
authors = [
  { name="Mark Tetlow", email="mdtetlow@gmail.com" },
]
description = "Blind SQL injection library"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "requests>=2.30.0",
    "urllib3>=2.0.2"
]

[project.urls]
"Homepage" = "https://github.com/mdtetlow/sqli-python"
"Bug Tracker" = "https://github.com/mdtetlow/sqli-python/issues"